<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".app.request.MakeRequest">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.scwang.wave.MultiWaveHeader
            android:id="@+id/multiWaveHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:mwhCloseColor="@color/grey"
            app:mwhStartColor="@color/grey_dark"
            app:mwhWaveHeight="10sp">

        </com.scwang.wave.MultiWaveHeader>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/arrow_back"
            app:layout_constraintBottom_toBottomOf="@+id/welcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/welcome"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/make_request"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/_50sdp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_10sdp"
                        android:orientation="horizontal">


                        <androidx.cardview.widget.CardView
                            android:layout_width="@dimen/_130sdp"
                            app:cardCornerRadius="@dimen/_10sdp"
                            android:backgroundTint="@color/hot_pink"
                            android:layout_height="@dimen/_150sdp" >


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_10sdp"
                                android:layout_gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/imageView"
                                    android:layout_width="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/allowance"
                                    app:tint="@color/white" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppins_bold"
                                    android:text="@string/allowance"
                                    android:layout_gravity="center"
                                    android:textAlignment="center"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/_14sdp"
                                  />

                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:gravity="right"
                            android:layout_height="wrap_content">

                            <androidx.cardview.widget.CardView
                                android:layout_width="@dimen/_130sdp"
                                app:cardCornerRadius="@dimen/_10sdp"
                                android:backgroundTint="@color/grey_dark"
                                android:layout_height="@dimen/_150sdp" >


                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/_10sdp"
                                    android:layout_gravity="center"
                                    android:orientation="vertical">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_height="wrap_content"
                                        android:src="@drawable/casuals"
                                        app:tint="@color/white" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/poppins_bold"
                                        android:text="@string/casuals"
                                        android:layout_gravity="center"
                                        android:textAlignment="center"
                                        android:textColor="@color/white"
                                        android:textSize="@dimen/_14sdp"
                                        />

                                </LinearLayout>
                            </androidx.cardview.widget.CardView>
                        </LinearLayout>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_10sdp"
                        android:orientation="horizontal">


                        <androidx.cardview.widget.CardView
                            android:layout_width="@dimen/_130sdp"
                            app:cardCornerRadius="@dimen/_10sdp"
                            android:backgroundTint="@color/grey"
                            android:layout_height="@dimen/_150sdp" >


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_10sdp"
                                android:layout_gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/gas_station"
                                    app:tint="@color/white" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppins_bold"
                                    android:text="@string/refill"
                                    android:layout_gravity="center"
                                    android:textAlignment="center"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/_14sdp"
                                  />

                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right">

                            <androidx.cardview.widget.CardView
                                android:layout_width="@dimen/_130sdp"
                                android:layout_height="@dimen/_150sdp"
                                android:backgroundTint="@color/hot_pink"
                                app:cardCornerRadius="@dimen/_10sdp">


                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_margin="@dimen/_10sdp"
                                    android:orientation="vertical">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:src="@drawable/maintainace"
                                        app:tint="@color/white" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:fontFamily="@font/poppins_bold"
                                        android:text="@string/maintainace"
                                        android:textAlignment="center"
                                        android:textColor="@color/white"
                                        android:textSize="@dimen/_14sdp" />

                                </LinearLayout>
                            </androidx.cardview.widget.CardView>
                        </LinearLayout>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_10sdp"
                        android:orientation="horizontal">


                        <androidx.cardview.widget.CardView
                            android:layout_width="@dimen/_130sdp"
                            app:cardCornerRadius="@dimen/_10sdp"
                            android:backgroundTint="@color/grey_dark"
                            android:layout_height="@dimen/_150sdp" >


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_10sdp"
                                android:layout_gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/leave"
                                    app:tint="@color/white" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppins_bold"
                                    android:text="@string/leave"
                                    android:layout_gravity="center"
                                    android:textAlignment="center"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/_14sdp"
                                  />

                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:gravity="right"
                            android:layout_height="wrap_content">

                            <androidx.cardview.widget.CardView
                                android:layout_width="@dimen/_130sdp"
                                app:cardCornerRadius="@dimen/_10sdp"
                                android:backgroundTint="@color/grey"
                                android:layout_height="@dimen/_150sdp" >


                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/_10sdp"
                                    android:layout_gravity="center"
                                    android:orientation="vertical">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_height="wrap_content"
                                        android:src="@drawable/inspection"
                                        app:tint="@color/white" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/poppins_bold"
                                        android:text="@string/inspection"
                                        android:layout_gravity="center"
                                        android:textAlignment="center"
                                        android:textColor="@color/white"
                                        android:textSize="@dimen/_14sdp"
                                        />

                                </LinearLayout>
                            </androidx.cardview.widget.CardView>
                        </LinearLayout>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_margin="@dimen/_10sdp"
                        android:orientation="horizontal">


                        <androidx.cardview.widget.CardView
                            android:layout_width="@dimen/_130sdp"
                            app:cardCornerRadius="@dimen/_10sdp"
                            android:backgroundTint="@color/hot_pink"
                            android:layout_height="@dimen/_150sdp" >


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_10sdp"
                                android:layout_gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/police"
                                    app:tint="@color/white" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppins_bold"
                                    android:text="@string/police"
                                    android:layout_gravity="center"
                                    android:textAlignment="center"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/_14sdp"
                                  />

                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                    </LinearLayout>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>