<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".authentication.ResetPassword">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">


                    <com.scwang.wave.MultiWaveHeader
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_70sdp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:rotation="180"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:mwhCloseColor="@color/grey"
                        app:mwhStartColor="@color/grey_dark"
                        app:mwhWaveHeight="80sp">

                    </com.scwang.wave.MultiWaveHeader>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <com.scwang.wave.MultiWaveHeader
                        android:id="@+id/multiWaveHeader"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="@dimen/_80sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:mwhCloseColor="@color/grey"
                        app:mwhStartColor="@color/grey_dark"
                        app:mwhWaveHeight="200sp">

                    </com.scwang.wave.MultiWaveHeader>


                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/reset"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_30sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/welcome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/welcome"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp"
                        app:layout_constraintEnd_toEndOf="@+id/textView"
                        app:layout_constraintStart_toStartOf="@+id/textView"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />


                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/one_more_step"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_8sdp"
                        app:layout_constraintEnd_toEndOf="@+id/welcome"
                        app:layout_constraintStart_toStartOf="@+id/welcome"
                        app:layout_constraintTop_toBottomOf="@+id/welcome" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editTextTextPersonName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_20sdp"
                        android:background="@drawable/edittext_grey"
                        android:textColorHint="@color/white"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/textView2"
                        app:layout_constraintStart_toStartOf="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/textView2">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:background="@drawable/edittext_grey"
                            android:fontFamily="@font/poppins"
                            android:hint="enter password"
                            android:inputType="textPassword"
                            android:padding="@dimen/_10sdp"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14sdp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_20sdp"
                        android:background="@drawable/edittext_grey"
                        android:hint="confirm password"
                        android:textColorHint="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
                        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
                        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/white">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:background="@drawable/edittext_grey"
                            android:fontFamily="@font/poppins"
                            android:inputType="textPassword"
                            android:padding="@dimen/_10sdp"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14sdp" />
                    </com.google.android.material.textfield.TextInputLayout>




                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/button_right_hot_pink"
                    android:drawableRight="@drawable/round_arrow_right"
                    android:drawableTint="@color/white"
                    android:fontFamily="@font/poppins"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:text="confirm"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
    
</androidx.constraintlayout.widget.ConstraintLayout>